force-app/main/default/objects/Campaign/fields/Macro_Source__c.field-meta.xml
<CustomField>
    <fullName>Macro_Source__c</fullName>
    <label>Macro Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Macro_Source</valueSetName>
    </valueSet>
</CustomField>