force-app/main/default/objects/Campaign/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Campaign (Email)</fullName>
            </value>
            <value>
                <fullName>Contact Us</fullName>
            </value>
            <value>
                <fullName>Digital (Paid Media)</fullName>
            </value>
            <value>
                <fullName>Direct (Email)</fullName>
            </value>
            <value>
                <fullName>Free Trial (Product)</fullName>
            </value>
            <value>
                <fullName>Gate (Content)</fullName>
            </value>
            <value>
                <fullName>Hosted (Webinar)</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>Live (Event)</fullName>
            </value>
            <value>
                <fullName>Live Chat</fullName>
            </value>
            <value>
                <fullName>Market Research (Other)</fullName>
            </value>
            <value>
                <fullName>Nurture (Email)</fullName>
            </value>
            <value>
                <fullName>Nurture (Operational)</fullName>
            </value>
            <value>
                <fullName>Online (Event)</fullName>
            </value>
            <value>
                <fullName>Review Sites (Other)</fullName>
            </value>
            <value>
                <fullName>Schedule a Demo</fullName>
            </value>
            <value>
                <fullName>Scheduling App (Chili Piper)</fullName>
            </value>
            <value>
                <fullName>Sponsored (Webinar)</fullName>
            </value>
            <value>
                <fullName>Subscription (Content)</fullName>
            </value>
            <value>
                <fullName>Tracking (Operational)</fullName>
            </value>
            <value>
                <fullName>Tradeshow (Event)</fullName>
            </value>
            <value>
                <fullName>Traditional (Paid Media)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>