force-app/main/default/objects/Campaign/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <defaultValue>&quot;3&quot;</defaultValue>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>1 is top priority - 3 is default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>