force-app/main/default/objects/Campaign/listViews/DG_FY23_ABM_Salesforce.listView-meta.xml
<ListView>
    <fullName>DG_FY23_ABM_Salesforce</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Mine</filterScope>
    <label>DG-FY23-ABM Salesforce</label>
</ListView>