force-app/main/default/objects/Campaign/listViews/DG_FY26_Q4_AI_BM_Report.listView-meta.xml
<ListView>
    <fullName>DG_FY26_Q4_AI_BM_Report</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>equals</operation>
        <value>DG-FY26-Q4-AI-BM-Report</value>
    </filters>
    <label>DG-FY26-Q4-AI-BM-Report</label>
    <language>en_US</language>
</ListView>